# FileShareX

./: .dockerignore  .env.docker.example  .env.example  .gitignore  1.yml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.claude/commands/: create-feature-spec.md
.claude/specs/: phase1-user-system.md  phase2-file-management.md  phase4-groups-spec.md
apps/accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
apps/files/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  validators.py  views.py
apps/groups/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/ipgroup/: admin.py  apps.py  forms.py  middleware.py  models.py  services.py  tasks.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  development.py  production.py
grock/: 1.md  2.md  3.md  4_list.md  5_detail.md  6_limit_chatgpt.md  7_final.md  Group mein Moderator Role.md  qurees.md
nginx/: default.conf  n8n.conf
requirements/: base.txt  development.txt  production.txt
static/css/: files.css  groups.css  main.css
static/js/: file-upload.js  groups.js  main.js
templates/: base.html
templates/accounts/: dashboard.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  signup.html
templates/components/: messages.html  navbar.html
templates/files/: _file_card.html  detail.html  my_files.html  trash.html  upload.html
(+25 files in other folders)
