[project]
name = "files-share-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "factory-boy>=3.3",
    "gunicorn>=21.0",
    "pillow>=10.0",
    "psycopg2-binary>=2.9",
    "pytest>=7.4",
    "pytest-django>=4.7",
    "python-decouple>=3.8",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "whitenoise>=6.6",
]
